--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.0",
-    "boostrap": "^2.0.0",
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
     "material-table": "^1.62.0",
@@ -27,7 +26,14 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "plugin:react/recommended"
+    ],
+    "parser": "babel-eslint",
+    "rules": {
+      "no-unused-vars": "off",
+      "react/prop-types": "off"
+    }
   },
   "browserslist": {
     "production": [
@@ -40,5 +46,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.6.0",
+    "eslint-plugin-react": "^7.20.6"
   }
 }
